--- a/style.css
+++ b/style.css
@@ -1,19 +1,35 @@
 ul{
     list-style-type: none;
     padding:0;
+    text-decoration: none;
+    text-align: center;
+    height: 100%; /* Full height */
+    position: fixed; /* Make it stick, even on scroll */
+    overflow: auto;
+    background-color: rgb(247, 244, 217);
+
 }
 
 li a{
-    background-color: rgb(216, 209, 209);
+    text-decoration: none;
     display:block;
     width:90px;
     color:black;
+    width:200px;
+    
+    padding-left: 3;
+    padding-top: 10;
+    padding-bottom: 10;
+}
+.logo{
+    background-color:rgba(170, 170, 170, 0.658);
 }
 li a:hover {
+    text-decoration: none;
     background-color: rgb(56, 56, 56);
     color: white;
 }
 .active{
-    background-color: yellow;
+    background-color: green;
     color: white;
 }
